@@ -1,3 +1,8 @@
+Jul 27, 2006
+
+  * FIXED: use rdf:nodeID for bnodes that are used multiple times.
+    "Yves Raimond"
+
 Jul 11, 2006
 
   * Fixed: Crash in rdf(+S, -P, literal(prefix(+Prefix), -Value)).
